2005-10-11  Christopher Faylor  <cgf@timesys.com>

	* Makefile.in: Make sure that directories are created prior to copying
	to them.

2005-10-11  Christopher Faylor  <cgf@timesys.com>

	* net.cc (cygwin_gethostbyname): Remove debugging.

2005-10-11  Corinna Vinschen  <corinna@vinschen.de>

	* syslog.cc (try_connect_syslogd): Add priority parameter. Use writev
	to add the priority to the message in a syslog conformant way.
	(vsyslog): If facility isn't set in the priority, use default facility
	as given in call to openlog. Fix agressive use of spaces in syslog
	output. Call try_connect_syslogd with priority parameter.

2005-10-11  Christopher Faylor  <cgf@timesys.com>

	* (symlink_info::set_error): Change to return bool if input error
	should be ignored.
	(symlink_info::check): Treat path as a normal file if set_error returns
	false.

2005-10-03  Christopher Faylor  <cgf@timesys.com>

	* cygheap.h (class process_lock): New class.
	* dtable.h (class dtable): Add class process_lock as a friend.
	* dcrt0.cc (get_exit_lock): Delete.
	(do_exit): Use process_lock class instead of get_exit_lock.
	* exceptions.cc (signal_exit): Ditto.
	* pinfo.cc (pinfo::exit): Ditto.
	(_pinfo::commune_process): Set process lock around this whole function.
	(_pinfo::commune_request): Use process_lock rather than myself.lock.
	* pinfo.h (pinfo::_lock): Delete.
	(pinfo::initialize_lock): Delete.
	(pinfo::lock): Delete.
	(pinfo::unlock): Delete.
	* winsup.h (get_exit_lock): Delete declaration.
	

2005-10-03  Corinna Vinschen  <corinna@vinschen.de>

	* uname.cc (uname): Disable use of GetNativeSystemInfo.

2005-10-01  Christopher Faylor  <cgf@timesys.com>

	* dcrt0.cc (get_exit_lock): Use myself.lock rather than exit_lock.
	* exceptions.cc (exit_lock): Delete.
	(events_init): Don't init exit_lock.
	* (_pinfo::commune_process): Add per-PICOM debugging.
	* sigproc.cc (talktome): Add some temporary debugging statements.

	* fhandler_proc.cc (format_proc_cpuinfo): Cosmetic change.